Add employee profile APIs
